--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         "https://amazon-eks.s3.us-west-2.amazonaws.com/\
         1.16.8/2020-04-16/bin/linux/amd64/aws-iam-authenticator"
         chmod +x ~/aws/aws-iam-authenticator
+        cp ~/aws/aws-iam-authenticator /usr/local/bin/aws-iam-authenticator
         echo "::add-path::~/aws"
         
     - name: Debug
